Add Support for Generate Valid Combinations